--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ author:
   name             : "Zhonghao Wang"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Hangzhou, China"
+  employer         : "Zhejiang University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "wongzhonghao123@gmail.com"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
