--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "citations.jpg"
+  avatar           : "zhonghao.png"
   name             : "Zhonghao Wang"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
