--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "zhonghao.png"
   name             : "Zhonghao Wang"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Master Student in Software Engineering at Zhejiang University"
   location         : "Hangzhou, China"
   employer         : "Zhejiang University"
   uri              : # URL
