--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Zhonghao Wang / Homepage"
+title                    : "Zhonghao Wang - Homepage"
 title_separator          : "-"
 name                     : &name "Zhonghao Wang"
 description              : &description "Master Student in Software Engineering at Zhejiang University"
-url                      : https://hazwruhi.github.io/academicpages/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://hazwruhi.github.io/academicpages # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "HazwRuHi/academicpages"
 
@@ -25,7 +25,7 @@ author:
   avatar           : "zhonghao.png"
   name             : "Zhonghao Wang"
   pronouns         : # example: "she/her"  
-  bio              : "Master Student in Software Engineering at Zhejiang University"
+  bio              : "Master Student in Software Engineering"
   location         : "Hangzhou, China"
   employer         : "Zhejiang University"
   uri              : # URL
@@ -80,7 +80,7 @@ publication_category:
   books:
     title: 'Books'
   manuscripts:
-    title: 'Journal Articles'    
+    title: 'Journal Articles'
   conferences:
     title: 'Conference Papers'
 
